# superquick

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
superquick/: cli.py  constants.py  utils.py
