[project]
name = "superquick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.3.1",
    "typer>=0.21.1",
]
[project.scripts]
sq = "superquick.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"